--- a/about.css
+++ b/about.css
@@ -1,11 +1,11 @@
 
 body, html {
-    background: url("images/about-bg.jpg");
+    background: url("images/bg.png");
     background-position: center center;
     background-size: cover;
     background-color: rgb(0,0,0,0.6); 
     background-blend-mode: multiply;
-    background-attachment: fixed;
+    background-attachment: ;
     font-family: futura light, sans-serif;
     font-weight: lighter;
     position: relative;
@@ -60,10 +60,10 @@ body, html {
 
 .welcome-sec {
   font-family: futura medium;
-  font-size: 200px; 
-  height: 100vh;
+  font-size: 40px; 
+  height:  100vh;
   text-align: center;
-  padding-top: 15%;
+  padding-top: 25%;
   color: #fff;
 }
  
@@ -102,9 +102,9 @@ body, html {
     background: url("images/bg.png");
     background-position: center center;
     background-size: cover;
-    background-color: rgb(0,0,0,0.6); 
+    background-color: rgb(0,0,0,0.3); 
     background-blend-mode: multiply;
-    background-attachment: fixed;
+    background-attachment: ;
     padding: 8px;
     color: #fff;
     height: auto;
