--- a/merch.css
+++ b/merch.css
@@ -1,11 +1,11 @@
 
 body, html {
-    background-image: url("images/merch-bg.jpg");
+    background-image: url("images/bg.png");
     background-position: center center;
     background-size: cover;
-    background-color: rgb(0,0,0.6,0.6); 
+    background-color: rgb(0,0,0,0.3); 
     background-blend-mode: multiply;
-    background-attachment: fixed;
+    background-attachment: ;
     font-family: futura light, sans-serif;
     font-weight: lighter;
     position: relative;
@@ -60,11 +60,14 @@ body, html {
 
 .welcome-sec {
   font-family: futura medium;
-  font-size: 200px; 
-  height: 100vh;
+  font-size: 50px; 
+  height:  100vh;
   text-align: center;
-  padding-top: 15%;
+  padding-top: 25%;
   color: #fff;
+  background: rgb(0,0,0,0.3);
+  background-blend-mode: multiply;
+  
 }
 
 #image-circle {
