--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
 body, html {
-    background: url("images/index-bg.jpg");
+    background: url("images/bg.png");
     background-position: center center;
     background-size: cover;
     background-color: rgb(0,0,0,0.6); 
     background-blend-mode: multiply;
-    background-attachment: fixed;
+    background-attachment: ;
     font-family: futura light, sans-serif;
     font-weight: lighter;
     position: relative;
@@ -53,7 +53,7 @@ body, html {
 /************************/
 .welcome-sec {
   font-family: futura medium;
-  font-size: 100px; 
+  font-size: 50px; 
   height:  100vh;
   text-align: center;
   padding-top: 25%;
@@ -216,13 +216,13 @@ body, html {
 
 #portfolio-header {
     color: #1a1a1a;
-    text-align: left;
-    padding: 15px;
     font-family: futura condensed bold;
+    text-align: center;
     font-size: 50px;
+    padding-bottom: 5%;
+    padding-top: 5%;
+
 }
-
-
 
 /* Footer */
 .footer {
