--- a/about.css
+++ b/about.css
@@ -1,11 +1,6 @@
 
 body, html {
-    background: url("images/bg.png");
-    background-position: center center;
-    background-size: cover;
-    background-color: rgb(0,0,0,0.6); 
-    background-blend-mode: multiply;
-    background-attachment: ;
+    background: #f0f0f0;
     font-family: futura light, sans-serif;
     font-weight: lighter;
     position: relative;
@@ -58,13 +53,25 @@ body, html {
     width: 100px;
 }
 
-.welcome-sec {
+.container-header {
+  display: table;
+  height: 100VH;
+  width: 100%;
+  background: url("images/bg.png");
+  background-position: center center;
+  background-size: cover;
+  background-color: rgb(0,0,0,0.3); 
+  background-blend-mode: multiply;
+    
+}
+
+.content-header {
   font-family: futura medium;
-  font-size: 40px; 
-  height:  100vh;
+  font-size: 40px;
+  color: white;
+  display: table-cell;
+  vertical-align: middle;
   text-align: center;
-  padding-top: 25%;
-  color: #fff;
 }
  
 /* About sec*/
