--- a/merch.css
+++ b/merch.css
@@ -1,11 +1,6 @@
 
 body, html {
-    background-image: url("images/bg.png");
-    background-position: center center;
-    background-size: cover;
-    background-color: rgb(0,0,0,0.3); 
-    background-blend-mode: multiply;
-    background-attachment: ;
+    background-image: #f0f0f0;
     font-family: futura light, sans-serif;
     font-weight: lighter;
     position: relative;
@@ -58,16 +53,25 @@ body, html {
     width: 100px;
 }
 
-.welcome-sec {
-  font-family: futura medium;
-  font-size: 50px; 
-  height:  100vh;
-  text-align: center;
-  padding-top: 25%;
-  color: #fff;
-  background: rgb(0,0,0,0.3);
+.container-header {
+  display: table;
+  height: 100VH;
+  width: 100%;
+  background: url("images/bg.png");
+  background-position: center center;
+  background-size: cover;
+  background-color: rgb(0,0,0,0.3); 
   background-blend-mode: multiply;
-  
+    
+}
+
+.content-header {
+  font-family: futura medium;
+  font-size: 40px;
+  color: white;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
 }
 
 #image-circle {
